32_kvs/grade.txt
Grading at Fri Jun 19 16:39:19 UTC 2020
Attempting to compile:
kv.c: In function ‘lookupValue’:
kv.c:78:14: error: expected ‘;’ before ‘:’ token
   return NULL:
              ^
The code did not compile!

Overall Grade: F
